--- a/app/src/main/res/layout/fragment_fragment_door.xml
+++ b/app/src/main/res/layout/fragment_fragment_door.xml
@@ -5,29 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".FragmentDoor">
+    tools:context=".DOORS.FragmentDoor">
 
     <TextView
         android:id="@+id/entrance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ALL DOORS"
-        android:textColor="#FFFFFF"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingStart="15dp"
+        android:paddingStart="10dp"
+        android:textSize="20dp"
+        android:gravity="center"
         android:layout_centerVertical="true"
-        />
+        android:text="ENTRANCE DOOR"
+        android:textColor="#FFFFFF" />
 
-    <Switch
-        android:id="@+id/switch1"
-        style="@style/SwitchDoorStyle"
-        android:theme="@style/SwitchDoorTheme"
+    <ImageButton
+        android:id="@+id/btnDoorEntrance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@id/entrance"
+        android:layout_marginStart="50dp"
         android:layout_centerVertical="true"
-        android:padding="15dp"
-        />
+        android:clickable="true"
+        android:scaleY="0.8"
+        android:scaleX="0.8"
+        android:background="@drawable/doorbutton"/>
 
 </RelativeLayout>
