--- a/app/src/main/res/layout/fragment_fragment_light1.xml
+++ b/app/src/main/res/layout/fragment_fragment_light1.xml
@@ -5,28 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".FragmentLight1">
+    tools:context=".LIGHTS.FragmentLight1">
 
     <TextView
         android:id="@+id/entrance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="15dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:paddingStart="10dp"
+        android:textSize="20dp"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:text="ENTRANCE LIGHTS"
+        android:text="HALL LIGHT ONE"
         android:textColor="#FFFFFF" />
 
     <ImageButton
-        android:id="@+id/btnMainTer"
-        style="@style/SwitchLampStyle"
+        android:id="@+id/btnHallOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:padding="15dp"
+        android:layout_toRightOf="@id/entrance"
+        android:layout_marginStart="50dp"
         android:layout_centerVertical="true"
-        android:theme="@style/SwitchLampTheme" />
+        android:clickable="true"
+        android:scaleY="0.8"
+        android:scaleX="0.8"
+        android:background="@drawable/lampbutton"/>
 
 </RelativeLayout>
