--- a/app/src/main/res/layout/fragment_fragment_light3.xml
+++ b/app/src/main/res/layout/fragment_fragment_light3.xml
@@ -5,30 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context=".FragmentLight3">
+    tools:context=".LIGHTS.FragmentLight3">
 
     <TextView
         android:id="@+id/entrance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MAIN TERRACE LIGHT"
-        android:textColor="#FFFFFF"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingStart="15dp"
+        android:paddingStart="10dp"
+        android:textSize="20dp"
         android:gravity="center"
         android:layout_centerVertical="true"
-        />
+        android:text="MAIN TERRACE LIGHT"
+        android:textColor="#FFFFFF" />
 
-    <Switch
-        android:id="@+id/switch1"
-        style="@style/SwitchLampStyle"
-        android:theme="@style/SwitchLampTheme"
+    <ImageButton
+        android:id="@+id/btnMainTer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:padding="15dp"
+        android:layout_toRightOf="@id/entrance"
+        android:layout_marginStart="50dp"
         android:layout_centerVertical="true"
-        />
+        android:clickable="true"
+        android:scaleY="0.8"
+        android:scaleX="0.8"
+        android:background="@drawable/lampbutton"/>
 
 </RelativeLayout>
