modifica layout prova fragment e activity lampadine

--- a/app/src/main/res/layout/activity_main_lamp.xml
+++ b/app/src/main/res/layout/activity_main_lamp.xml
@@ -22,7 +22,8 @@
         <ImageView
             android:id="@+id/pianta"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
+            android:scaleType="fitXY"
             android:src="@drawable/pianta"
             />
 
@@ -32,8 +33,8 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:onClick="ToLamp1"
-            android:layout_marginTop="70dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="60dp"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:background="@color/colorPrimaryDark"
@@ -45,8 +46,8 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:onClick="ToLamp2"
-            android:layout_marginTop="110dp"
-            android:layout_marginStart="130dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="100dp"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:background="@color/colorPrimaryDark"
@@ -58,7 +59,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:onClick="ToLamp3"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="55dp"
             android:layout_marginStart="270dp"
             android:scaleX="0.5"
             android:scaleY="0.5"
@@ -72,7 +73,7 @@
             android:clickable="true"
             android:onClick="ToLamp4"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="170dp"
+            android:layout_marginTop="110dp"
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:background="@color/colorPrimaryDark"
@@ -99,12 +100,12 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
         android:background="@color/colorPrimary"
         app:itemTextColor="#FFFFFF"
-        app:itemIconSize="30dp"
+        app:itemIconSize="15dp"
         app:itemIconTint="@android:color/tab_indicator_text"
         app:menu="@menu/menu_navigation" />
 
