--- a/app/src/main/res/layout/fragment_fragment_light.xml
+++ b/app/src/main/res/layout/fragment_fragment_light.xml
@@ -22,7 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingStart="10dp"
-                android:textSize="14dp"
+                android:textSize="12dp"
                 android:gravity="center"
                 android:layout_centerVertical="true"
                 android:text="ENTRANCE LIGHTS"
@@ -40,20 +40,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:scaleType="fitXY"
-                android:scaleY="0.18"
+                android:scaleX="0.7"
+                android:scaleY="0.15"
                 android:background="@drawable/lampbutton"/>
 
         </RelativeLayout>
 
-
-
-
-
     </LinearLayout>
-
-
-
-
 
 </RelativeLayout>
