--- a/app/src/main/res/layout/fragment_fragment_fan.xml
+++ b/app/src/main/res/layout/fragment_fragment_fan.xml
@@ -7,27 +7,45 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".FAN.FragmentFan">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp">
+
     <TextView
         android:id="@+id/entrance"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingStart="10dp"
-        android:textSize="20dp"
+        android:textSize="10dp"
         android:gravity="center"
         android:layout_centerVertical="true"
         android:text="FAN"
         android:textColor="#FFFFFF" />
 
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp">
+
     <ImageButton
         android:id="@+id/btnFan"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/entrance"
-        android:layout_marginStart="50dp"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
         android:clickable="true"
-        android:scaleY="0.8"
-        android:scaleX="0.8"
+        android:scaleX="0.7"
+        android:scaleY="0.2"
         android:background="@drawable/fanbutton"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
