--- a/app/src/main/res/layout/activity_main_door.xml
+++ b/app/src/main/res/layout/activity_main_door.xml
@@ -9,20 +9,22 @@
     tools:context=".MainDoorActivity">
 
     <LinearLayout
+        android:id="@+id/colonne"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="100">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:layout_weight="50">
 
             <ImageView
                 android:id="@+id/pianta"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="200dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/pianta"
                 />
 
@@ -32,8 +34,8 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:onClick="ToDoor"
-                android:layout_marginTop="70dp"
-                android:layout_marginStart="80dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginStart="30dp"
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 android:background="@color/colorPrimaryDark"
@@ -43,14 +45,13 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:layout_weight="50">
 
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="0dp">
+                android:layout_height="200dp">
             </FrameLayout>
 
         </RelativeLayout>
@@ -60,11 +61,11 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation_door"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="40dp"
+        android:layout_below="@id/colonne"
         android:background="@color/colorPrimary"
         app:itemTextColor="#FFFFFF"
-        app:itemIconSize="30dp"
+        app:itemIconSize="15dp"
         app:itemIconTint="@android:color/tab_indicator_text"
         app:menu="@menu/menu_navigation_door" />
 
