--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="12dp"
-        android:text="ALE SUCA"
-        android:textColor="#FFFFFF"/>
+        android:text="designer del cazzo"
+        android:textColor="#FFFFFF"
+        android:textSize="12dp" />
 
 </RelativeLayout>
