--- a/app/src/main/res/layout/activity_main_lamp.xml
+++ b/app/src/main/res/layout/activity_main_lamp.xml
@@ -25,8 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="fitXY"
-            android:src="@drawable/pianta"
-            />
+            android:src="@drawable/pianta" />
 
         <ImageButton
             android:id="@+id/button1"
