--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -3,13 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:layout_centerInParent="true">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 
     <TextView
         android:id="@+id/collaborators"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/title"
         android:fontFamily="@font/archivo_narrow"
         android:text="Cassinari Alessandro, Londero Andrea, Manessi Claudia,   Negri Matteo, Pettenella Luca "
         android:textColor="#FFFFFF"
@@ -19,7 +27,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/collaborators"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:text="REALISED BY"
@@ -48,5 +56,7 @@
         android:textSize="16dp"
         android:textColor="#FFFFFF"
         />
+
+    </RelativeLayout>
 
 </RelativeLayout>
