controllo credit layout

--- a/app/src/main/res/layout/activity_credit.xml
+++ b/app/src/main/res/layout/activity_credit.xml
@@ -9,19 +9,20 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true">
 
     <TextView
         android:id="@+id/collaborators"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/title"
         android:fontFamily="@font/archivo_narrow"
         android:text="Cassinari Alessandro, Londero Andrea, Manessi Claudia,   Negri Matteo, Pettenella Luca "
         android:textColor="#FFFFFF"
-        android:textSize="16dp" />
+        android:textSize="14dp" />
 
     <TextView
         android:id="@+id/title"
@@ -29,9 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:text="REALISED BY"
-        android:textSize="20dp"
+        android:textSize="16dp"
         android:textColor="#FFFFFF"
         />
 
@@ -39,10 +40,11 @@
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:paddingTop="5dp"
         android:layout_below="@id/collaborators"
         android:layout_centerHorizontal="true"
         android:text="COLLABORATORS"
+        android:textSize="16dp"
         android:textColor="#FFFFFF"
         />
 
@@ -53,7 +55,7 @@
         android:layout_below="@id/title2"
         android:layout_centerHorizontal="true"
         android:text="Antonio Lezzi"
-        android:textSize="16dp"
+        android:textSize="14dp"
         android:textColor="#FFFFFF"
         />
 
